# lastfm-to-sqlite

./: .gitignore  pyproject.toml  pytest.ini
lastfm_to_sqlite/: cli.py  lastfm.py
tests/: test_lastfm_to_sqlite.py
